tests/cases/compiler-development/artifact/errors/diagnostic-ambiguous-module.ari
mod diagnostic_ambiguous_module;

fn main() -> i64 {
  return 0;
}
